# omi

./: .gitignore  .gitmodules  README.md  next-steps.md  omi.sh  todo.md  what.md
corpus-ui/: Dockerfile  pyproject.toml
docs/: api.md  architecture.md  pi-deploy.md
pi/: Caddyfile  Dockerfile.caddy  deploy.sh  docker-compose.yml  ingest.py  radicale-nginx.conf
pi/ble/: audio_stream.py  ble_bridge.py  capture_photo.py  pyproject.toml  set_wifi.py
pi/samples/: README.txt
pi/service/: .env.example  Dockerfile  pyproject.toml
pi/service/src/personalisation/: config.py  main.py  storage.py  transcription.py  vault_writer.py
pi/service/src/personalisation/agents/: writer.py
pi/service/src/personalisation/cal/: client.py
pi/service/src/personalisation/digest/: builder.py  scheduler.py
pi/service/src/personalisation/embeddings/: index.py  retrieval.py
pi/service/src/personalisation/feeds/: config.py  email_reader.py  github.py  rss.py  state.py  youtube.py
pi/service/src/personalisation/llm/: __init__.py  client.py
pi/service/src/personalisation/nano_claw/: agent.py  commands.py  router.py  telegram.py  vault_watcher.py
pi/service/src/personalisation/preprocessors/: audio.py  image.py  text.py  video.py
pi/service/src/personalisation/profile/: builder.py
