[project]
name = "corpus-ui"
version = "0.1.0"
requires-python = ">=3.11"
description = "Web UI for managing the personal media corpus."
dependencies = [
    "corpus @ ../corpus",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    # Full media support so the UI can preprocess anything dropped in
    "anthropic>=0.40.0",
    "Pillow>=11.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corpus_ui"]
