[project]
name = "personalisation-service"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    # ── Corpus (shared media ingestion + embeddings + profile) ────────────────
    "corpus @ ../../corpus",

    # ── Core API + web ────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",

    # ── AI / LLMs ─────────────────────────────────────────────────────────────
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",   # Gemini — long context summarization
    "httpx>=0.27.0",                # Ollama + GitHub API

    # ── Telegram bot ──────────────────────────────────────────────────────────
    "python-telegram-bot>=21.0",

    # ── Vault watcher ─────────────────────────────────────────────────────────
    "watchfiles>=0.21",

    # ── Feed system ───────────────────────────────────────────────────────────
    "feedparser>=6.0.0",            # RSS / Atom / Substack
    "yt-dlp>=2024.1.0",             # YouTube monitoring
    "ddgs>=0.1",                     # Web search (no API key, replaces duckduckgo-search)
    "PyYAML>=6.0",                  # feeds.yaml parsing

    # ── Calendar integration ──────────────────────────────────────────────────
    "caldav>=1.3.0",
    "icalendar>=5.0.0",

    # ── Digest rendering ──────────────────────────────────────────────────────
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.35.0"]

# Lock file targets only the Pi (Linux aarch64) — no Windows/macOS variants
[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'aarch64'"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personalisation"]
